# proxtty

./: Cargo.toml  README.md  TODO.md  VISION.md
examples/: click-menu.rs  minimal.rs  rainbow-mouse.rs  statusbar.rs
src/: actions.rs  app.rs  cli.rs  config.rs  debug.rs  input.rs  lib.rs  main.rs  mouse.rs  overlay.rs  proxy.rs  pty_session.rs  renderer.rs  screen.rs  term.rs
